chainsight-cdk-macros/src/canisters/snapshots/chainsight_cdk_macros__canisters__snapshot_indexer_icp__test__snapshot__snapshot_indexer_icp__with_lens_targets.snap
---
source: chainsight-cdk-macros/src/canisters/snapshot_indexer_icp.rs
expression: formatted
---
use candid::{Decode, Encode};
use chainsight_cdk::rpc::{CallProvider, Caller, Message};
use chainsight_cdk_macros::{
    chainsight_common, did_export, init_in, manage_single_state, prepare_stable_structure,
    setup_func, snapshot_indexer_icp_source, stable_memory_for_vec, timer_task_func,
    StableMemoryStorable,
};
mod types;
did_export!("sample_snapshot_indexer_icp");
init_in!();
chainsight_common!(60u32);
manage_single_state!("target_canister", String, false);
setup_func ! ({ target_canister : String });
prepare_stable_structure!();
stable_memory_for_vec!("snapshot", Snapshot, 0, true);
timer_task_func!("set_task", "index");
#[derive(
    Clone,
    Debug,
    candid :: CandidType,
    candid :: Deserialize,
    serde :: Serialize,
    StableMemoryStorable,
)]
#[stable_mem_storable_opts(max_size = 10000, is_fixed_size = false)]
pub struct Snapshot {
    pub value: SnapshotValue,
    pub timestamp: u64,
}
pub type SnapshotValue = types::ResponseType;
fn _get_last_snapshot_value() -> SnapshotValue {
    get_last_snapshot().value
}
fn _get_top_snapshot_values(n: u64) -> Vec<SnapshotValue> {
    get_top_snapshots(n)
        .iter()
        .map(|s| s.value.clone())
        .collect()
}
fn _get_snapshot_value(idx: u64) -> SnapshotValue {
    get_snapshot(idx).value
}
#[ic_cdk::query]
#[candid::candid_method(query)]
pub fn get_last_snapshot_value() -> SnapshotValue {
    _get_last_snapshot_value()
}
#[ic_cdk::query]
#[candid::candid_method(query)]
pub fn get_top_snapshot_values(n: u64) -> Vec<SnapshotValue> {
    _get_top_snapshot_values(n)
}
#[ic_cdk::query]
#[candid::candid_method(query)]
pub fn get_snapshot_value(idx: u64) -> SnapshotValue {
    _get_snapshot_value(idx)
}
#[ic_cdk::update]
#[candid::candid_method(update)]
pub async fn proxy_get_last_snapshot_value(input: std::vec::Vec<u8>) -> std::vec::Vec<u8> {
    use chainsight_cdk::rpc::Receiver;
    chainsight_cdk::rpc::ReceiverProviderWithoutArgs::<SnapshotValue>::new(
        proxy(),
        _get_last_snapshot_value,
    )
    .reply(input)
    .await
}
#[ic_cdk::update]
#[candid::candid_method(update)]
pub async fn proxy_get_top_snapshot_values(input: std::vec::Vec<u8>) -> std::vec::Vec<u8> {
    use chainsight_cdk::rpc::Receiver;
    chainsight_cdk::rpc::ReceiverProvider::<u64, Vec<SnapshotValue>>::new(
        proxy(),
        _get_top_snapshot_values,
    )
    .reply(input)
    .await
}
#[ic_cdk::update]
#[candid::candid_method(update)]
pub async fn proxy_get_snapshot_value(input: std::vec::Vec<u8>) -> std::vec::Vec<u8> {
    use chainsight_cdk::rpc::Receiver;
    chainsight_cdk::rpc::ReceiverProvider::<u64, SnapshotValue>::new(proxy(), _get_snapshot_value)
        .reply(input)
        .await
}
snapshot_indexer_icp_source!("proxy_get_last_snapshot");
type CallCanisterArgs = Vec<String>;
pub fn call_args() -> CallCanisterArgs {
    vec![
        "ryjl3-tyaaa-aaaaa-aaaba-cai".to_string(),
        "zfcdd-tqaaa-aaaaq-aaaga-cai".to_string(),
        "mxzaz-hqaaa-aaaar-qaada-cai".to_string(),
    ]
}
type CallCanisterResponse = SnapshotValue;
#[ic_cdk::update]
#[candid::candid_method(update)]
async fn index() {
    if ic_cdk::caller() != proxy() {
        panic!("Not permitted")
    }
    let current_ts_sec = ic_cdk::api::time() / 1000000;
    let target_canister = candid::Principal::from_text(get_target_canister()).unwrap();
    let px = _get_target_proxy(target_canister).await;
    let call_result = CallProvider::new()
        .call(
            Message::new::<CallCanisterArgs>(call_args(), px.clone(), "proxy_get_last_snapshot")
                .unwrap(),
        )
        .await
        .unwrap();
    let value = call_result.reply::<CallCanisterResponse>().unwrap();
    let datum = Snapshot {
        value: value.clone(),
        timestamp: current_ts_sec,
    };
    let _ = add_snapshot(datum.clone());
    ic_cdk::println!("ts={}, value={:?}", datum.timestamp, datum.value);
}

